--- a/style.css
+++ b/style.css
@@ -43,6 +43,18 @@ border-radius: 1rem;
 box-shadow: 1rem 1rem 0.5rem 0.2rem #e0a8b2;
 margin: 3rem 3rem
 }
+.box-row:hover 
+@media screen and (max-width: 1280px) {
+    .box-row{
+        width: 40%
+    }    
+@media screen and (min-width: 480px) {
+     .box-row{
+        width: 40%;
+     }
+}
+
+}
 .album-img{
 height: 70%;
 display: flex;
