--- a/style.css
+++ b/style.css
@@ -9,60 +9,103 @@ body,
     font-size: 62.5%;
     background-color: #ffe0e8;
 }
-.boxes{
+
+.boxes {
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
-.header{
+
+.header {
     font-size: 7rem;
     text-align: center;
     margin: 3rem 5rem;
+    animation: animation 10s 1;
 }
 
-h1{
+@keyframes animation {
+    0% {
+        color: #e0a8b2;
+    }
+
+    50% {
+        color: #bb7180;
+    }
+
+    75% {
+        color: #4a0c0c;
+    }
+
+    100% {
+        color: #000000;
+    }
+}
+
+
+h1 {
     height: 15vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-image: url(https://i.pinimg.com/564x/3d/fa/8a/3dfa8a58478b53b8d7ca731f500edc64.jpg);
-
-}
-.box-row{
-background-color: #fbcfd6;
-height: 50vh;
-width: 20%;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: space-around;
-border-radius: 1rem;
-box-shadow: 1rem 1rem 0.5rem 0.2rem #e0a8b2;
-margin: 3rem 3rem
-}
-.box-row:hover 
-@media screen and (max-width: 1280px) {
-    .box-row{
-        width: 40%
-    }    
-@media screen and (min-width: 480px) {
-     .box-row{
-        width: 40%;
-     }
 }
 
+
+.box-row {
+    background-color: #fbcfd6;
+    height: 50vh;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 1rem;
+    box-shadow: 1rem 1rem 0.5rem 0.2rem #e0a8b2;
+    margin: 3rem 3rem
 }
-.album-img{
-height: 70%;
-display: flex;
-justify-content: center;
-object-fit: cover;
+
+.box-row {
+    transition: all 0.5s;
 }
-.about-text{
+
+.box-row:hover {
+    transform: scale(1.1);
+    color: #ffffff;
+}
+
+.album-img {
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    object-fit: cover;
+    filter: blur(2px);
+}
+
+.album-img {
+    transition: all 0.8s;
+}
+
+.album-img:hover {
+    transform: scale(0.8);
+    filter: blur(0px);
+}
+
+.about-text {
     background-color: #fbcfd6;
     font-size: 1.5rem;
     text-align: center;
+    transition: all 0.1s;
+}
+
+.about-text:hover {
+    transform: translateY(-20px);
+}
+
+@media screen and (max-width: 1080) {
+    .box-row {
+        width: 40%;
+    }
 }
