--- a/style.css
+++ b/style.css
@@ -104,8 +104,19 @@ h1 {
     transform: translateY(-20px);
 }
 
-@media screen and (max-width: 1080) {
+@media screen and (max-width: 1280px) {
+   .header{
+    width: 40%;
+   }
     .box-row {
+        width: 40%;
+    }
+}
+@media screen and (max-width: 768px) {
+    .header{
+        width: 40%;
+    }
+    .box-row{
         width: 40%;
     }
 }
